<resources>
    <string name="app_name">BlitzzWare</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="cont">CONTINUE</string>

    <string name="slide_1_title">Welcome to HR Prima</string>
    <string name="slide_1_desc">Leverage the Power of the Ultimate HR Application!</string>
    <string name="slide_2_title">Employee Set Up</string>
    <string name="slide_2_desc">Leverage the Power of the Ultimate HR Application!</string>
    <string name="slide_3_title">Payroll Management</string>
    <string name="slide_3_desc">Leverage the Power of the Ultimate HR Application!</string>

    <string name="home">Home</string>
    <string name="goods">Goods</string>
    <string name="settings">Settings</string>

    <!-- The below two strings represents the open and close operations of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="hi_jil">Hi, Jil</string>
    <string name="summary">Summary</string>
    <string name="all_goods">All Goods</string>
    <string name="all_contacts">All Contacts</string>
    <string name="update_stock">Update Stock</string>
    <string name="history">History</string>
</resources>