<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/nav1">
        <item
            android:id="@+id/home_nav"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"
            />
        <item
            android:id="@+id/goods_nav"
            android:icon="@drawable/baseline_production_quantity_limits_24"
            android:title="@string/goods"/>
        <item
        android:id="@+id/updateStock_nav"
        android:icon="@drawable/baseline_system_update_alt_24"
        android:title="@string/update_stock"/>
        <item
        android:id="@+id/history_nav"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/history"/>
        <item
            android:id="@+id/settings_nav"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"/>
        <item
            android:id="@+id/logout_nav"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout"/>
    </menu>
