<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:id="@+id/rounded_background"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@drawable/rounded_border"
        android:orientation="vertical">

        <!-- Card view -->

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_margin="@dimen/dp15"
            app:cardCornerRadius="@dimen/_7dp"
            app:cardElevation="@dimen/_5dp"
            android:padding="@dimen/dp15"
            app:cardBackgroundColor="@color/white">

            <!-- Your card content goes here -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="2"
                    android:rowCount="3"
                    >
                <TextView
                    android:id="@+id/Summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:layout_marginHorizontal="@dimen/dp15"/>

                <TextView
                    android:id="@+id/Summary2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="helllo"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:layout_marginHorizontal="@dimen/dp15" />

                </GridLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="3"
            >
        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp15"
            app:cardCornerRadius="@dimen/_7dp"
            app:cardElevation="@dimen/_5dp"
            app:cardBackgroundColor="@color/white"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            app:cardUseCompatPadding="true"
            >

            <!-- Your card content goes here -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_production_quantity_limits_24"
                    />

                <TextView
                    android:id="@+id/allGoods2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_goods"
                    android:textSize="@dimen/_20sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:layout_marginHorizontal="@dimen/dp15"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp15"
                app:cardCornerRadius="@dimen/_7dp"
                app:cardElevation="@dimen/_5dp"
                app:cardBackgroundColor="@color/white"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="0"
                android:layout_column="1"
                app:cardUseCompatPadding="true"
                >

                <!-- Your card content goes here -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_account_box_24"
                        />

                    <TextView
                        android:id="@+id/allContacts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_contacts"
                        android:textSize="@dimen/_20sp"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:layout_marginHorizontal="@dimen/dp15"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>        </GridLayout>
    </LinearLayout>


</RelativeLayout>